# openapi.yaml
@@ -26,7 +26,7 @@ paths:
         description: Number of records to return per page
         schema:
           type: integer
-          default: 20
+          default: 1
       responses:
         200:
           description: Successful operation
@@ -160,7 +160,7 @@ paths:
         description: Number of records to return per page
         schema:
           type: integer
-          default: 20
+          default: 1
       responses:
         200:
           description: Successful operation
@@ -500,23 +500,19 @@ components:
     PaginatedResponseData:
       type: object
       properties:
-        total:
+        next_id:
           type: integer
           format: int32
-          description: Total amount of resource
+          description: The number of the next page (if any)
+        prev_id:
+          type: integer
+          format: int32
+          description: The number of the previous page (if any)
         count:
           type: integer
           format: int32
-          description: Count of the resources in the current response
-        page:
-          type: integer
-          format: int32
-          description: Page number
-        size:
-          type: integer
-          format: int32
-          description: Number of resource per page
-        resources:
+          description: Count of the data in the current response
+        data:
           type: array
           format: int32
           description: Resources
@@ -524,16 +520,15 @@ components:
             type: object
             properties: {}
       example:
-        total: 10
-        size: 5
-        count: 5
-        resources:
+        next_id: 3
+        previous_d: 1
+        count: 15
+        data:
         - {}
         - {}
         - {}
         - {}
         - {}
-        page: 1
       xml:
         name: PaginatedResponseData
   
@@ -551,4 +546,4 @@ components:
       description: Number of records to return per page
       schema:
         type: integer
-        default: 20
+        default: 1
